kubernetes/workloads/templates/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: $WORKLOAD_NAMESPACE
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: ztc-workloads
spec:
  selector:
    app: vaultwarden
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
