kubernetes/workloads/templates/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: $WORKLOAD_NAMESPACE
  labels:
    app: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: ztc-workloads
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: $HOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
